# computational-methods

computer-arithmetic/: CMakeLists.txt
computer-arithmetic/ex1/: ex1.cpp  raport.txt
computer-arithmetic/ex2/: ex2.cpp  raport.txt
computer-arithmetic/ex3/: ex3.cpp  raport.txt
computer-arithmetic/ex4/: ex4.cpp  raport.txt
fourier-transform/: CMakeLists.txt  fourier.cpp
integration/: CMakeLists.txt  aghIntegration.cpp  aghIntegration.h  main.cpp
interpolation/: CMakeLists.txt  interpolation.cpp
interpolation&regression/: regression.cpp
linear-eq&matrixes/: CMakeLists.txt  aghMatrix.cpp  aghMatrix.h  main.cpp
